--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,6 @@
     }
    ],
    "source": [
-    "\n",
     "list=([y for x in a for y in x])\n",
     "\n",
     "print(list)"
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +657,7 @@
        "      <th>17</th>\n",
        "      <th>18</th>\n",
        "      <th>19</th>\n",
-       "      <th>My new column</th>\n",
+       "      <th>20</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -684,7 +683,7 @@
        "      <td>0.069162</td>\n",
        "      <td>0.952291</td>\n",
        "      <td>0.286542</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.186542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -708,7 +707,7 @@
        "      <td>0.232135</td>\n",
        "      <td>0.549324</td>\n",
        "      <td>0.572232</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.472232</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -732,7 +731,7 @@
        "      <td>0.430411</td>\n",
        "      <td>0.531757</td>\n",
        "      <td>0.489528</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.389528</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -756,7 +755,7 @@
        "      <td>0.402791</td>\n",
        "      <td>0.685976</td>\n",
        "      <td>0.246594</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.146594</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -780,7 +779,7 @@
        "      <td>0.229109</td>\n",
        "      <td>0.022881</td>\n",
        "      <td>0.479022</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.379022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -804,7 +803,7 @@
        "      <td>0.293260</td>\n",
        "      <td>0.937828</td>\n",
        "      <td>0.880858</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.780858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -828,7 +827,7 @@
        "      <td>0.389789</td>\n",
        "      <td>0.016787</td>\n",
        "      <td>0.503695</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.403695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -852,7 +851,7 @@
        "      <td>0.334802</td>\n",
        "      <td>0.517694</td>\n",
        "      <td>0.646110</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.546110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -876,7 +875,7 @@
        "      <td>0.141746</td>\n",
        "      <td>0.771144</td>\n",
        "      <td>0.489660</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.389660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -900,7 +899,7 @@
        "      <td>0.676051</td>\n",
        "      <td>0.109349</td>\n",
        "      <td>0.872947</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.772947</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -932,17 +931,17 @@
        "3  0.260279  0.528873  0.168043  ...  0.677014  0.175735  0.632370  0.926715   \n",
        "4  0.892210  0.381701  0.415264  ...  0.696930  0.819751  0.944029  0.869965   \n",
        "\n",
-       "         15        16        17        18        19  My new column  \n",
-       "0  0.386457  0.696932  0.069162  0.952291  0.286542              1  \n",
-       "1  0.315645  0.495355  0.232135  0.549324  0.572232              1  \n",
-       "2  0.735692  0.435998  0.430411  0.531757  0.489528              1  \n",
-       "3  0.157158  0.929446  0.402791  0.685976  0.246594              1  \n",
-       "4  0.604341  0.232964  0.229109  0.022881  0.479022              1  \n",
-       "0  0.816049  0.749068  0.293260  0.937828  0.880858              1  \n",
-       "1  0.045749  0.683793  0.389789  0.016787  0.503695              1  \n",
-       "2  0.739031  0.560394  0.334802  0.517694  0.646110              1  \n",
-       "3  0.085675  0.120525  0.141746  0.771144  0.489660              1  \n",
-       "4  0.041723  0.819140  0.676051  0.109349  0.872947              1  \n",
+       "         15        16        17        18        19        20  \n",
+       "0  0.386457  0.696932  0.069162  0.952291  0.286542  0.186542  \n",
+       "1  0.315645  0.495355  0.232135  0.549324  0.572232  0.472232  \n",
+       "2  0.735692  0.435998  0.430411  0.531757  0.489528  0.389528  \n",
+       "3  0.157158  0.929446  0.402791  0.685976  0.246594  0.146594  \n",
+       "4  0.604341  0.232964  0.229109  0.022881  0.479022  0.379022  \n",
+       "0  0.816049  0.749068  0.293260  0.937828  0.880858  0.780858  \n",
+       "1  0.045749  0.683793  0.389789  0.016787  0.503695  0.403695  \n",
+       "2  0.739031  0.560394  0.334802  0.517694  0.646110  0.546110  \n",
+       "3  0.085675  0.120525  0.141746  0.771144  0.489660  0.389660  \n",
+       "4  0.041723  0.819140  0.676051  0.109349  0.872947  0.772947  \n",
        "\n",
        "[10 rows x 21 columns]"
       ]
@@ -952,7 +951,8 @@
     }
    ],
    "source": [
-    "data['My new column'] = 1\n",
+    "data['20'] = [(col - 0.1) for col in data[\"19\"]]\n",
+    "\n",
     "display(data.head(10))"
    ]
   },
@@ -961,6 +961,24 @@
    "metadata": {},
    "source": [
     "### 10. Use a list comprehension to extract and print all values from the data set that are between 0.7 and 0.75."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7347510852128797, 0.7025657075988269, 0.7132714209987683, 0.7280006345208285, 0.736029494090402, 0.7472962776291713, 0.7258310816144985, 0.7343092314001137, 0.7358941798147411, 0.7365416322783028, 0.7088042362916818, 0.7329024831531535, 0.7023481768180954, 0.7133695725698419, 0.7476323136755818, 0.7008930873050235, 0.7357618655811269, 0.7013619954419494, 0.7268545088531969, 0.7032248108904495, 0.7150799992177622, 0.7173964318670598, 0.7306642125209889, 0.7124169515124726, 0.71223975981198, 0.7383982036983279, 0.7298115760258881, 0.7051334608870933, 0.7321333453970806, 0.7178166705957928, 0.7374449181749492, 0.7159290265157912, 0.7294980584878026, 0.7215147068185102, 0.7045750112959754, 0.7111584953876777, 0.7209375615129192, 0.7396561066717461, 0.7303553716733908, 0.7133690799930356, 0.7356923324968598, 0.7390312927111312, 0.7078738356977186, 0.7321533684342264, 0.7490680818183477, 0.7085098152301276, 0.7130781095091867, 0.7264121114538001, 0.7196096371031628, 0.7393833032570581, 0.7244863338885654, 0.7033930409580709, 0.7274869207330491, 0.7376946446827494]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=[y for col in data for y in data[col] if y <= 0.75 and y >=0.7]\n",
+    "print(x)\n"
    ]
   },
   {
