Resolviendo un error

--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -566,6 +566,7 @@
     }
    ],
    "source": [
+    "data_set= [pd.read_csv(os.path.join('../data',y)) for y in file_lst]\n",
     "data=pd.concat(data_set, axis=0, ignore_index=True)\n",
     "display(data[:10])"
    ]
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -957,75 +958,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0.7356923324968598,\n",
-       " 0.7357618655811269,\n",
-       " 0.7306642125209889,\n",
-       " 0.7347510852128797,\n",
-       " 0.7343092314001137,\n",
-       " 0.7490680818183477,\n",
-       " 0.7390312927111312,\n",
-       " 0.7159290265157912,\n",
-       " 0.7033930409580709,\n",
-       " 0.7013619954419494,\n",
-       " 0.7396561066717461,\n",
-       " 0.7045750112959754,\n",
-       " 0.7358941798147411,\n",
-       " 0.736029494090402,\n",
-       " 0.7085098152301276,\n",
-       " 0.7472962776291713,\n",
-       " 0.7329024831531535,\n",
-       " 0.7124169515124726,\n",
-       " 0.71223975981198,\n",
-       " 0.7365416322783028,\n",
-       " 0.7025657075988269,\n",
-       " 0.7298115760258881,\n",
-       " 0.7294980584878026,\n",
-       " 0.7215147068185102,\n",
-       " 0.7130781095091867,\n",
-       " 0.7393833032570581,\n",
-       " 0.7258310816144985,\n",
-       " 0.7383982036983279,\n",
-       " 0.7178166705957928,\n",
-       " 0.7088042362916818,\n",
-       " 0.7374449181749492,\n",
-       " 0.7264121114538001,\n",
-       " 0.7133695725698419,\n",
-       " 0.7476323136755818,\n",
-       " 0.7268545088531969,\n",
-       " 0.7111584953876777,\n",
-       " 0.7008930873050235,\n",
-       " 0.7209375615129192,\n",
-       " 0.7303553716733908,\n",
-       " 0.7274869207330491,\n",
-       " 0.7133690799930356,\n",
-       " 0.7078738356977186,\n",
-       " 0.7032248108904495,\n",
-       " 0.7196096371031628,\n",
-       " 0.7244863338885654,\n",
-       " 0.7321533684342264,\n",
-       " 0.7376946446827494,\n",
-       " 0.7132714209987683,\n",
-       " 0.7023481768180954,\n",
-       " 0.7051334608870933,\n",
-       " 0.7280006345208285,\n",
-       " 0.7150799992177622,\n",
-       " 0.7321333453970806,\n",
-       " 0.7173964318670598]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7356923324968598, 0.7357618655811269, 0.7306642125209889, 0.7347510852128797, 0.7343092314001137, 0.7490680818183477, 0.7390312927111312, 0.7159290265157912, 0.7033930409580709, 0.7013619954419494, 0.7396561066717461, 0.7045750112959754, 0.7358941798147411, 0.736029494090402, 0.7085098152301276, 0.7472962776291713, 0.7329024831531535, 0.7124169515124726, 0.71223975981198, 0.7365416322783028, 0.7025657075988269, 0.7298115760258881, 0.7294980584878026, 0.7215147068185102, 0.7130781095091867, 0.7393833032570581, 0.7258310816144985, 0.7383982036983279, 0.7178166705957928, 0.7088042362916818, 0.7374449181749492, 0.7264121114538001, 0.7133695725698419, 0.7476323136755818, 0.7268545088531969, 0.7111584953876777, 0.7008930873050235, 0.7209375615129192, 0.7303553716733908, 0.7274869207330491, 0.7133690799930356, 0.7078738356977186, 0.7032248108904495, 0.7196096371031628, 0.7244863338885654, 0.7321533684342264, 0.7376946446827494, 0.7132714209987683, 0.7023481768180954, 0.7051334608870933, 0.7280006345208285, 0.7150799992177622, 0.7321333453970806, 0.7173964318670598]\n"
+     ]
     }
    ],
    "source": [
     "select_data = [data[str(j)][i] for i in range(len(data)) for j in range(len(data.columns)) if data[str(j)][i]>=0.7 and data[str(j)][i]<=0.75]\n",
-    "display (select_data)"
+    "print (select_data)"
    ]
   },
   {
