--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -583,17 +583,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2', '9', '12', '14', '17']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "select_columns = [col for col in data._get_numeric_data() if data[col].median()<0.48]\n",
     "print(select_columns)"
@@ -608,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +769,7 @@
        "      <td>0.379022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>5</th>\n",
        "      <td>0.734751</td>\n",
        "      <td>0.195362</td>\n",
        "      <td>0.734309</td>\n",
@@ -801,7 +793,7 @@
        "      <td>0.780858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>6</th>\n",
        "      <td>0.772607</td>\n",
        "      <td>0.445391</td>\n",
        "      <td>0.249642</td>\n",
@@ -825,7 +817,7 @@
        "      <td>0.403695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>7</th>\n",
        "      <td>0.226428</td>\n",
        "      <td>0.268764</td>\n",
        "      <td>0.694262</td>\n",
@@ -849,7 +841,7 @@
        "      <td>0.546110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>8</th>\n",
        "      <td>0.362748</td>\n",
        "      <td>0.495430</td>\n",
        "      <td>0.113876</td>\n",
@@ -873,7 +865,7 @@
        "      <td>0.389660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>9</th>\n",
        "      <td>0.033415</td>\n",
        "      <td>0.340433</td>\n",
        "      <td>0.464971</td>\n",
@@ -908,11 +900,11 @@
        "2  0.641917  0.821055  0.392437  0.782617  0.510762  0.428320  0.017324   \n",
        "3  0.806532  0.569258  0.148175  0.809987  0.459632  0.735762  0.730664   \n",
        "4  0.311185  0.501165  0.365979  0.782807  0.776795  0.797199  0.791946   \n",
-       "0  0.734751  0.195362  0.734309  0.598184  0.763433  0.263434  0.868066   \n",
-       "1  0.772607  0.445391  0.249642  0.787922  0.598583  0.827238  0.624126   \n",
-       "2  0.226428  0.268764  0.694262  0.622335  0.063843  0.122683  0.815625   \n",
-       "3  0.362748  0.495430  0.113876  0.594149  0.612522  0.625204  0.864050   \n",
-       "4  0.033415  0.340433  0.464971  0.363737  0.025815  0.434129  0.415163   \n",
+       "5  0.734751  0.195362  0.734309  0.598184  0.763433  0.263434  0.868066   \n",
+       "6  0.772607  0.445391  0.249642  0.787922  0.598583  0.827238  0.624126   \n",
+       "7  0.226428  0.268764  0.694262  0.622335  0.063843  0.122683  0.815625   \n",
+       "8  0.362748  0.495430  0.113876  0.594149  0.612522  0.625204  0.864050   \n",
+       "9  0.033415  0.340433  0.464971  0.363737  0.025815  0.434129  0.415163   \n",
        "\n",
        "          7         8         9  ...        11        12        13        14  \\\n",
        "0  0.250324  0.147078  0.162984  ...  0.509619  0.593212  0.911839  0.257645   \n",
@@ -920,11 +912,11 @@
        "2  0.680720  0.340412  0.462513  ...  0.251949  0.032847  0.995700  0.816563   \n",
        "3  0.934502  0.080322  0.763502  ...  0.027637  0.409665  0.942846  0.133256   \n",
        "4  0.847157  0.771811  0.233944  ...  0.053030  0.208551  0.824354  0.588567   \n",
-       "0  0.058092  0.753502  0.587513  ...  0.178356  0.182922  0.147631  0.391188   \n",
-       "1  0.601524  0.688753  0.338870  ...  0.471474  0.267443  0.453351  0.800716   \n",
-       "2  0.584542  0.032594  0.589775  ...  0.650973  0.565705  0.691784  0.265223   \n",
-       "3  0.260279  0.528873  0.168043  ...  0.677014  0.175735  0.632370  0.926715   \n",
-       "4  0.892210  0.381701  0.415264  ...  0.696930  0.819751  0.944029  0.869965   \n",
+       "5  0.058092  0.753502  0.587513  ...  0.178356  0.182922  0.147631  0.391188   \n",
+       "6  0.601524  0.688753  0.338870  ...  0.471474  0.267443  0.453351  0.800716   \n",
+       "7  0.584542  0.032594  0.589775  ...  0.650973  0.565705  0.691784  0.265223   \n",
+       "8  0.260279  0.528873  0.168043  ...  0.677014  0.175735  0.632370  0.926715   \n",
+       "9  0.892210  0.381701  0.415264  ...  0.696930  0.819751  0.944029  0.869965   \n",
        "\n",
        "         15        16        17        18        19        20  \n",
        "0  0.386457  0.696932  0.069162  0.952291  0.286542  0.186542  \n",
@@ -932,11 +924,11 @@
        "2  0.735692  0.435998  0.430411  0.531757  0.489528  0.389528  \n",
        "3  0.157158  0.929446  0.402791  0.685976  0.246594  0.146594  \n",
        "4  0.604341  0.232964  0.229109  0.022881  0.479022  0.379022  \n",
-       "0  0.816049  0.749068  0.293260  0.937828  0.880858  0.780858  \n",
-       "1  0.045749  0.683793  0.389789  0.016787  0.503695  0.403695  \n",
-       "2  0.739031  0.560394  0.334802  0.517694  0.646110  0.546110  \n",
-       "3  0.085675  0.120525  0.141746  0.771144  0.489660  0.389660  \n",
-       "4  0.041723  0.819140  0.676051  0.109349  0.872947  0.772947  \n",
+       "5  0.816049  0.749068  0.293260  0.937828  0.880858  0.780858  \n",
+       "6  0.045749  0.683793  0.389789  0.016787  0.503695  0.403695  \n",
+       "7  0.739031  0.560394  0.334802  0.517694  0.646110  0.546110  \n",
+       "8  0.085675  0.120525  0.141746  0.771144  0.489660  0.389660  \n",
+       "9  0.041723  0.819140  0.676051  0.109349  0.872947  0.772947  \n",
        "\n",
        "[10 rows x 21 columns]"
       ]
@@ -963,12 +955,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.7347510852128797,\n",
+       " 0.7025657075988269,\n",
+       " 0.7132714209987683,\n",
+       " 0.7280006345208285,\n",
+       " 0.736029494090402,\n",
+       " 0.7472962776291713,\n",
+       " 0.7258310816144985,\n",
+       " 0.7343092314001137,\n",
+       " 0.7358941798147411,\n",
+       " 0.7365416322783028,\n",
+       " 0.7088042362916818,\n",
+       " 0.7329024831531535,\n",
+       " 0.7023481768180954,\n",
+       " 0.7133695725698419,\n",
+       " 0.7476323136755818,\n",
+       " 0.7008930873050235,\n",
+       " 0.7357618655811269,\n",
+       " 0.7013619954419494,\n",
+       " 0.7268545088531969,\n",
+       " 0.7032248108904495,\n",
+       " 0.7150799992177622,\n",
+       " 0.7173964318670598,\n",
+       " 0.7306642125209889,\n",
+       " 0.7124169515124726,\n",
+       " 0.71223975981198,\n",
+       " 0.7383982036983279,\n",
+       " 0.7298115760258881,\n",
+       " 0.7051334608870933,\n",
+       " 0.7321333453970806,\n",
+       " 0.7178166705957928,\n",
+       " 0.7374449181749492,\n",
+       " 0.7159290265157912,\n",
+       " 0.7294980584878026,\n",
+       " 0.7215147068185102,\n",
+       " 0.7045750112959754,\n",
+       " 0.7111584953876777,\n",
+       " 0.7209375615129192,\n",
+       " 0.7396561066717461,\n",
+       " 0.7303553716733908,\n",
+       " 0.7133690799930356,\n",
+       " 0.7356923324968598,\n",
+       " 0.7390312927111312,\n",
+       " 0.7078738356977186,\n",
+       " 0.7321533684342264,\n",
+       " 0.7490680818183477,\n",
+       " 0.7085098152301276,\n",
+       " 0.7130781095091867,\n",
+       " 0.7264121114538001,\n",
+       " 0.7196096371031628,\n",
+       " 0.7393833032570581,\n",
+       " 0.7244863338885654,\n",
+       " 0.7033930409580709,\n",
+       " 0.7274869207330491,\n",
+       " 0.7376946446827494]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n"
+     ]
+    }
+   ],
+   "source": [
+    "valores =[x for data_c in data for x in data[data_c] if 0.7<x<0.75] \n",
+    "display(valores)\n",
+    "print(len(valores))\n",
+    "#list_ultima = [ x for i in data for if 0.7<x<0.75"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "list_ultima = [ x for i in data for if 0.7<x<0.75"
-   ]
+   "source": []
   }
  ],
  "metadata": {
