--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -975,20 +975,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-0f7e3f6da6b9>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-0f7e3f6da6b9>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    data['20']=\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[0.7347510852128797,\n",
+       " 0.7025657075988269,\n",
+       " 0.7132714209987683,\n",
+       " 0.7280006345208285,\n",
+       " 0.736029494090402,\n",
+       " 0.7472962776291713,\n",
+       " 0.7258310816144985,\n",
+       " 0.7343092314001137,\n",
+       " 0.7358941798147411,\n",
+       " 0.7365416322783028,\n",
+       " 0.7088042362916818,\n",
+       " 0.7329024831531535,\n",
+       " 0.7023481768180954,\n",
+       " 0.7133695725698419,\n",
+       " 0.7476323136755818,\n",
+       " 0.7008930873050235,\n",
+       " 0.7357618655811269,\n",
+       " 0.7013619954419494,\n",
+       " 0.7268545088531969,\n",
+       " 0.7032248108904495,\n",
+       " 0.7150799992177622,\n",
+       " 0.7173964318670598,\n",
+       " 0.7306642125209889,\n",
+       " 0.7124169515124726,\n",
+       " 0.71223975981198,\n",
+       " 0.7383982036983279,\n",
+       " 0.7298115760258881,\n",
+       " 0.7051334608870933,\n",
+       " 0.7321333453970806,\n",
+       " 0.7178166705957928,\n",
+       " 0.7374449181749492,\n",
+       " 0.7159290265157912,\n",
+       " 0.7294980584878026,\n",
+       " 0.7215147068185102,\n",
+       " 0.7045750112959754,\n",
+       " 0.7111584953876777,\n",
+       " 0.7209375615129192,\n",
+       " 0.7396561066717461,\n",
+       " 0.7303553716733908,\n",
+       " 0.7133690799930356,\n",
+       " 0.7356923324968598,\n",
+       " 0.7390312927111312,\n",
+       " 0.7078738356977186,\n",
+       " 0.7321533684342264,\n",
+       " 0.7490680818183477,\n",
+       " 0.7085098152301276,\n",
+       " 0.7130781095091867,\n",
+       " 0.7264121114538001,\n",
+       " 0.7196096371031628,\n",
+       " 0.7393833032570581,\n",
+       " 0.7244863338885654,\n",
+       " 0.7033930409580709,\n",
+       " 0.7274869207330491,\n",
+       " 0.7376946446827494]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "data['20']="
+    "New_list=[e for i in data for e in data[i] if e>0.70 and e<0.75]\n",
+    "display(New_list)"
    ]
   },
   {
