--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -559,7 +559,7 @@
     }
    ],
    "source": [
-    "#data_set=[pd.read_csv(os.path.join('../data',f)) for f in file_lst]\n",
+    "data_set=[pd.read_csv(os.path.join('../data',f)) for f in file_lst]\n",
     "data=pd.concat(data_set, axis=0, ignore_index = True)\n",
     "display(data[0:10])"
    ]
@@ -573,10 +573,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2', '9', '12', '14', '17']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "select_columns= [col for col in data._get_numeric_data() if data[col].median()<0.48]\n",
+    "display(select_columns)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -587,10 +600,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "insert() takes exactly 2 arguments (1 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-42d8d118cd23>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mselect_columns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'20'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: insert() takes exactly 2 arguments (1 given)"
+     ]
+    }
+   ],
+   "source": [
+    "select_columns.insert('20')"
+   ]
   },
   {
    "cell_type": "markdown",
