--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -36,6 +36,8 @@
    "source": [
     "def summation(num):\n",
     "    # This function returns 1+2+3+....+num\n",
+    "    \n",
+    "    # Your code here:\n",
     "    r=sum(range(num))+num\n",
     "    return r"
    ]
@@ -83,6 +85,8 @@
    "source": [
     "def summation2(*args):\n",
     "    # This function returns the sum of *args\n",
+    "    \n",
+    "    # Your code here:\n",
     "    return sum(*args)"
    ]
   },
@@ -118,6 +122,8 @@
    "source": [
     "def summation3(a, b, c):\n",
     "    # This function returns a+b+c\n",
+    "    \n",
+    "    # Your code here:\n",
     "    return a+b+c"
    ]
   },
@@ -162,6 +168,8 @@
    "source": [
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
+    "    \n",
+    "    # Your code here:\n",
     "    return sum(kwargs.values())-kwargs['red']"
    ]
   },
@@ -210,6 +218,8 @@
    "source": [
     "def summation5(a, b, c, *args, **kwargs):\n",
     "    # This function returns the sum of a,b,c,d and e\n",
+    "    \n",
+    "    # Your code here:\n",
     "    return a+b+c+sum(args)+sum(kwargs.values())"
    ]
   },
