--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -37,26 +37,7 @@
     "def summation(num):\n",
     "    # This function returns 1+2+3+....+num\n",
     "    \n",
-    "    # Your code here:\n",
-    "    r=sum(range(num))+num\n",
-    "    return r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2926\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (summation(num))"
+    "    # Your code here:"
    ]
   },
   {
@@ -86,25 +67,7 @@
     "def summation2(*args):\n",
     "    # This function returns the sum of *args\n",
     "    \n",
-    "    # Your code here:\n",
-    "    return sum(*args)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (summation2(array))"
+    "    # Your code here:"
    ]
   },
   {
@@ -123,25 +86,7 @@
     "def summation3(a, b, c):\n",
     "    # This function returns a+b+c\n",
     "    \n",
-    "    # Your code here:\n",
-    "    return a+b+c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (summation3(*array))"
+    "    # Your code here:"
    ]
   },
   {
@@ -169,25 +114,7 @@
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
     "    \n",
-    "    # Your code here:\n",
-    "    return sum(kwargs.values())-kwargs['red']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (summation4(**dictionary))"
+    "    # Your code here:"
    ]
   },
   {
@@ -216,28 +143,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def summation5(a, b, c, *args, **kwargs):\n",
+    "def summation5(.....):\n",
     "    # This function returns the sum of a,b,c,d and e\n",
-    "    \n",
-    "    # Your code here:\n",
-    "    return a+b+c+sum(args)+sum(kwargs.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "769\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (summation5(a, b, c, *d, **e))"
+    "    # You need to define the function input\n",
+    "    # Your code here:"
    ]
   },
   {
