creating new branch

--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can also iterate through an iterator using a for loop like this:\n",
+    "# We can also iterate through a iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
     "# This is why we are redefining the iterator below\n",
     "\n",
