--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2926\n"
+     ]
+    }
+   ],
    "source": [
     "def summation(num):\n",
     "    # This function returns 1+2+3+....+num\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return sum(range(1,num+1))\n",
+    "\n",
+    "print (summation(num))"
    ]
   },
   {
@@ -51,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "def summation2(*args):\n",
     "    # This function returns the sum of *args\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    sum = 0\n",
+    "    for e in args[0]:\n",
+    "        sum += e\n",
+    "    return sum\n",
+    "\n",
+    "print (summation2(array))"
    ]
   },
   {
@@ -79,14 +104,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "def summation3(a, b, c):\n",
     "    # This function returns a+b+c\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return a+b+c\n",
+    "\n",
+    "print(summation3(*array))"
    ]
   },
   {
@@ -98,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,14 +143,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n"
+     ]
+    }
+   ],
    "source": [
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "\n",
+    "    return sum(kwargs[e] for e in kwargs if e is not \"red\")\n",
+    "\n",
+    "print(summation4(**dictionary))"
    ]
   },
   {
@@ -126,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +187,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "769\n"
+     ]
+    }
+   ],
    "source": [
-    "def summation5(.....):\n",
+    "def summation5(*args, **kwargs):\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    \n",
+    "    return sum(args)+sum(kwargs.values())\n",
+    "\n",
+    "print (summation5(a,b,c,*d,**e))"
    ]
   },
   {
@@ -160,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -242,9 +302,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# We can also iterate through an iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
@@ -265,9 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "def divisible2(iterator):\n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
@@ -278,7 +356,16 @@
     "    # Sample Output: 2\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    for e in iterator:\n",
+    "        if e%2==0:\n",
+    "            return e\n",
+    "            break\n",
+    "            \n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "iterator = iter([1,2,3])\n",
+    "print(divisible2(iterator))    "
    ]
   },
   {
@@ -292,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,9 +399,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "iterator = firstn(5)\n",
     "\n",
@@ -331,9 +430,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "def even_iterator(n):\n",
     "    # This function produces an iterator containing all even numbers between 0 and n\n",
@@ -344,7 +453,16 @@
     "    # Sample Output: iter([0, 2, 4])\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    number = 0\n",
+    "    while number < n:\n",
+    "            if number%2 == 0:\n",
+    "                yield number\n",
+    "            number = number + 1\n",
+    "\n",
+    "iterator2 = even_iterator(5)  \n",
+    "\n",
+    "for i in iterator2:\n",
+    "    print(i)"
    ]
   },
   {
@@ -371,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
