--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
     "    # This function returns 1+2+3+....+num\n",
     "    \n",
     "    # Your code here:\n",
-    "    return sum(range(1,num+1))\n",
+    "    return sum(range(num+1))\n",
     "\n",
     "print (summation(num))"
    ]
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
