por el challenge 3

--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -85,15 +85,15 @@
        "27"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def summation2(*args):\n",
-    "    return sum(i for i in args)\n",
-    "    # Your code here:\n",
+    "    #return sum(i for i in args)\n",
+    "    return sum(args)\n",
     "    \n",
     "summation2(*array)\n",
     "    "
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "27"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,8 @@
     "def summation3(a, b, c):\n",
     "\n",
     "    l=[a,b,c]\n",
-    "    return sum(i for i in l)\n",
+    "    #return sum(i for i in l)\n",
+    "    return sum(l)\n",
     "\n",
     "\n",
     "summation3(*array)"
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -160,15 +161,15 @@
        "54"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def summation4(**kwargs):\n",
-    "    return sum(i for i in kwargs.values())- kwargs['red']\n",
-    "\n",
+    "    #return sum(i for i in kwargs.values())- kwargs['red']\n",
+    "    return sum(kwargs.values()) - kwargs['red']\n",
     "summation4(**dictionary)"
    ]
   },
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,14 +195,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation5(*args,**kwargs)\n",
+    "def summation5(*args,**kwargs):\n",
+    "    return sum(args) + sum(kwargs.values())\n",
+    "    #return sum(i for i in args and kwargs)\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    \n",
+    "summation5(a,b,c,*d,**e)"
    ]
   },
   {
